posts page ugly horizontal bar fix
fixes ugly horizontal scrollbar appearing when a post with extremely wide image is present in the posts list

--- a/client/css/core-general.styl
+++ b/client/css/core-general.styl
@@ -300,10 +300,10 @@ a .access-key
         background-size: 20px 20px
     img
         opacity: 0
-        width: auto
+        width: 100%
         height: 100%
     video
-        width: auto
+        width: 100%
         height: 100%
 
 .flexbox-dummy
